GNOME Bugzilla – Bug 767565
Set highlight-syntax property from FALSE to TRUE doesn't redraw the view directly
Last modified: 2016-06-16 16:16:27 UTC
It's 100% reproducible for me with test-widget. When the GtkSourceBuffer:highlight-syntax property is changed from FALSE to TRUE (with the checkbutton in the side panel), the view is still black and white. Then when we click on the view, the colors appear. It's maybe a regression of commit 949cd128064201935f90d999544e6a19f8e3baa6. I don't know much about the ContextEngine internals, but I would expect that it just works and that we don't need an external hack to apply the highlighting tags.
Fixed with commit 2c56dc3f2e68f8aed6a02c3bd5e6485e082a22c2.
This bug number reflects well what the code does.
Filed bug #767702 for the confusing name of the highlight-updated signal.